--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongo-express": "^0.51.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.11",
     "nconf": "^0.10.0",
